Set caps for edges from super source and to super sink to be very large, set upper bound on cap vars

--- a/Constant cost function Integer LP formulation.ipynb
+++ b/Constant cost function Integer LP formulation.ipynb
@@ -137,12 +137,35 @@
     "transition_matrix,edge_capacity_factors,edge_flows,vertex_dict = preprocess_graph(adj_matrix,sources,sinks)\n",
     "source = 0 #super source\n",
     "sink = len(transition_matrix)-1 #super sink\n",
-    "epsilon = 0.000001 #This is supposed to be a very small value that helps us define the indicator variable"
+    "#This is supposed to be a very small value that helps us define the indicator variable\n",
+    "#epsilon < 1/flow_val\n",
+    "epsilon = 0.001/flow_val\n",
+    "CAP_UB = flow_val * len(adj_matrix)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cap_dict = {}\n",
+    "for i in range(len(transition_matrix[source])):\n",
+    "    if(transition_matrix[0][i] == 1):\n",
+    "        cf = 'x_0'+'_'+str(i)\n",
+    "        cap_dict[cf] = len(vertex_dict[i]['o'])\n",
+    "\n",
+    "for i in range(len(sinks)):\n",
+    "    new_sink_idx = sinks[i]+1\n",
+    "    cf = 'x_'+str(new_sink_idx)+'_'+str(sink)\n",
+    "    cap_dict[cf] = len(vertex_dict[new_sink_idx]['i'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -157,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +189,7 @@
     "lp_problem = pulp.LpProblem(\"Graph min cost\", pulp.LpMinimize)\n",
     "\n",
     "#Define an upper bound on scaling factor since for constant case, the value of epsilon can cause this factor to blow up\n",
-    "edge_cap_vars = LpVariable.dicts(\"EdgeCaps\",edge_capacity_factors,1,flow_val)\n",
+    "edge_cap_vars = LpVariable.dicts(\"EdgeCaps\",edge_capacity_factors,1,CAP_UB)\n",
     "edge_flow_vars = LpVariable.dicts(\"EdgeFlows\",edge_flows,0)\n",
     "#Indicator variables used in objective fn\n",
     "indicator_vars = LpVariable.dicts(\"IndicatorVars\",indicator_vals,0,1,'Integer') "
@@ -174,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +235,10 @@
     "\n",
     "#Capacity constraints\n",
     "for cap, flow in zip(edge_capacity_factors, edge_flows):\n",
-    "    lp_problem += edge_flow_vars[flow] <= edge_cap_vars[cap]\n",
+    "    cap_multiplier = 1\n",
+    "    if(cap in cap_dict):\n",
+    "        cap_multiplier = CAP_UB\n",
+    "    lp_problem += edge_flow_vars[flow] <= edge_cap_vars[cap]*cap_multiplier\n",
     "\n",
     "#Indicator variable constraints\n",
     "for cap, ind_val in zip(edge_capacity_factors, indicator_vals):\n",
@@ -222,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -300,11 +326,11 @@
        "\n",
        "_C28: EdgeFlows_y_10_13 + EdgeFlows_y_11_13 + EdgeFlows_y_12_13 <= 7\n",
        "\n",
-       "_C29: - EdgeCaps_x_0_1 + EdgeFlows_y_0_1 <= 0\n",
+       "_C29: - 84 EdgeCaps_x_0_1 + EdgeFlows_y_0_1 <= 0\n",
        "\n",
-       "_C30: - EdgeCaps_x_0_2 + EdgeFlows_y_0_2 <= 0\n",
+       "_C30: - 84 EdgeCaps_x_0_2 + EdgeFlows_y_0_2 <= 0\n",
        "\n",
-       "_C31: - EdgeCaps_x_0_3 + EdgeFlows_y_0_3 <= 0\n",
+       "_C31: - 84 EdgeCaps_x_0_3 + EdgeFlows_y_0_3 <= 0\n",
        "\n",
        "_C32: - EdgeCaps_x_1_4 + EdgeFlows_y_1_4 <= 0\n",
        "\n",
@@ -340,128 +366,151 @@
        "\n",
        "_C48: - EdgeCaps_x_9_12 + EdgeFlows_y_9_12 <= 0\n",
        "\n",
-       "_C49: - EdgeCaps_x_10_13 + EdgeFlows_y_10_13 <= 0\n",
+       "_C49: - 84 EdgeCaps_x_10_13 + EdgeFlows_y_10_13 <= 0\n",
        "\n",
-       "_C50: - EdgeCaps_x_11_13 + EdgeFlows_y_11_13 <= 0\n",
+       "_C50: - 84 EdgeCaps_x_11_13 + EdgeFlows_y_11_13 <= 0\n",
        "\n",
-       "_C51: - EdgeCaps_x_12_13 + EdgeFlows_y_12_13 <= 0\n",
+       "_C51: - 84 EdgeCaps_x_12_13 + EdgeFlows_y_12_13 <= 0\n",
        "\n",
-       "_C52: - EdgeCaps_x_0_1 + IndicatorVars_z_0_1 <= -1e-06\n",
+       "_C52: - EdgeCaps_x_0_1 + IndicatorVars_z_0_1 <= -0.000142857142857\n",
        "\n",
-       "_C53: - 1e-06 EdgeCaps_x_0_1 + IndicatorVars_z_0_1 >= -1e-06\n",
+       "_C53: - 0.000142857142857 EdgeCaps_x_0_1 + IndicatorVars_z_0_1\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C54: - EdgeCaps_x_0_2 + IndicatorVars_z_0_2 <= -1e-06\n",
+       "_C54: - EdgeCaps_x_0_2 + IndicatorVars_z_0_2 <= -0.000142857142857\n",
        "\n",
-       "_C55: - 1e-06 EdgeCaps_x_0_2 + IndicatorVars_z_0_2 >= -1e-06\n",
+       "_C55: - 0.000142857142857 EdgeCaps_x_0_2 + IndicatorVars_z_0_2\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C56: - EdgeCaps_x_0_3 + IndicatorVars_z_0_3 <= -1e-06\n",
+       "_C56: - EdgeCaps_x_0_3 + IndicatorVars_z_0_3 <= -0.000142857142857\n",
        "\n",
-       "_C57: - 1e-06 EdgeCaps_x_0_3 + IndicatorVars_z_0_3 >= -1e-06\n",
+       "_C57: - 0.000142857142857 EdgeCaps_x_0_3 + IndicatorVars_z_0_3\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C58: - EdgeCaps_x_1_4 + IndicatorVars_z_1_4 <= -1e-06\n",
+       "_C58: - EdgeCaps_x_1_4 + IndicatorVars_z_1_4 <= -0.000142857142857\n",
        "\n",
-       "_C59: - 1e-06 EdgeCaps_x_1_4 + IndicatorVars_z_1_4 >= -1e-06\n",
+       "_C59: - 0.000142857142857 EdgeCaps_x_1_4 + IndicatorVars_z_1_4\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C60: - EdgeCaps_x_1_5 + IndicatorVars_z_1_5 <= -1e-06\n",
+       "_C60: - EdgeCaps_x_1_5 + IndicatorVars_z_1_5 <= -0.000142857142857\n",
        "\n",
-       "_C61: - 1e-06 EdgeCaps_x_1_5 + IndicatorVars_z_1_5 >= -1e-06\n",
+       "_C61: - 0.000142857142857 EdgeCaps_x_1_5 + IndicatorVars_z_1_5\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C62: - EdgeCaps_x_2_4 + IndicatorVars_z_2_4 <= -1e-06\n",
+       "_C62: - EdgeCaps_x_2_4 + IndicatorVars_z_2_4 <= -0.000142857142857\n",
        "\n",
-       "_C63: - 1e-06 EdgeCaps_x_2_4 + IndicatorVars_z_2_4 >= -1e-06\n",
+       "_C63: - 0.000142857142857 EdgeCaps_x_2_4 + IndicatorVars_z_2_4\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C64: - EdgeCaps_x_2_5 + IndicatorVars_z_2_5 <= -1e-06\n",
+       "_C64: - EdgeCaps_x_2_5 + IndicatorVars_z_2_5 <= -0.000142857142857\n",
        "\n",
-       "_C65: - 1e-06 EdgeCaps_x_2_5 + IndicatorVars_z_2_5 >= -1e-06\n",
+       "_C65: - 0.000142857142857 EdgeCaps_x_2_5 + IndicatorVars_z_2_5\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C66: - EdgeCaps_x_2_6 + IndicatorVars_z_2_6 <= -1e-06\n",
+       "_C66: - EdgeCaps_x_2_6 + IndicatorVars_z_2_6 <= -0.000142857142857\n",
        "\n",
-       "_C67: - 1e-06 EdgeCaps_x_2_6 + IndicatorVars_z_2_6 >= -1e-06\n",
+       "_C67: - 0.000142857142857 EdgeCaps_x_2_6 + IndicatorVars_z_2_6\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C68: - EdgeCaps_x_3_5 + IndicatorVars_z_3_5 <= -1e-06\n",
+       "_C68: - EdgeCaps_x_3_5 + IndicatorVars_z_3_5 <= -0.000142857142857\n",
        "\n",
-       "_C69: - 1e-06 EdgeCaps_x_3_5 + IndicatorVars_z_3_5 >= -1e-06\n",
+       "_C69: - 0.000142857142857 EdgeCaps_x_3_5 + IndicatorVars_z_3_5\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C70: - EdgeCaps_x_3_6 + IndicatorVars_z_3_6 <= -1e-06\n",
+       "_C70: - EdgeCaps_x_3_6 + IndicatorVars_z_3_6 <= -0.000142857142857\n",
        "\n",
-       "_C71: - 1e-06 EdgeCaps_x_3_6 + IndicatorVars_z_3_6 >= -1e-06\n",
+       "_C71: - 0.000142857142857 EdgeCaps_x_3_6 + IndicatorVars_z_3_6\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C72: - EdgeCaps_x_4_5 + IndicatorVars_z_4_5 <= -1e-06\n",
+       "_C72: - EdgeCaps_x_4_5 + IndicatorVars_z_4_5 <= -0.000142857142857\n",
        "\n",
-       "_C73: - 1e-06 EdgeCaps_x_4_5 + IndicatorVars_z_4_5 >= -1e-06\n",
+       "_C73: - 0.000142857142857 EdgeCaps_x_4_5 + IndicatorVars_z_4_5\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C74: - EdgeCaps_x_4_7 + IndicatorVars_z_4_7 <= -1e-06\n",
+       "_C74: - EdgeCaps_x_4_7 + IndicatorVars_z_4_7 <= -0.000142857142857\n",
        "\n",
-       "_C75: - 1e-06 EdgeCaps_x_4_7 + IndicatorVars_z_4_7 >= -1e-06\n",
+       "_C75: - 0.000142857142857 EdgeCaps_x_4_7 + IndicatorVars_z_4_7\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C76: - EdgeCaps_x_5_7 + IndicatorVars_z_5_7 <= -1e-06\n",
+       "_C76: - EdgeCaps_x_5_7 + IndicatorVars_z_5_7 <= -0.000142857142857\n",
        "\n",
-       "_C77: - 1e-06 EdgeCaps_x_5_7 + IndicatorVars_z_5_7 >= -1e-06\n",
+       "_C77: - 0.000142857142857 EdgeCaps_x_5_7 + IndicatorVars_z_5_7\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C78: - EdgeCaps_x_5_9 + IndicatorVars_z_5_9 <= -1e-06\n",
+       "_C78: - EdgeCaps_x_5_9 + IndicatorVars_z_5_9 <= -0.000142857142857\n",
        "\n",
-       "_C79: - 1e-06 EdgeCaps_x_5_9 + IndicatorVars_z_5_9 >= -1e-06\n",
+       "_C79: - 0.000142857142857 EdgeCaps_x_5_9 + IndicatorVars_z_5_9\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C80: - EdgeCaps_x_6_5 + IndicatorVars_z_6_5 <= -1e-06\n",
+       "_C80: - EdgeCaps_x_6_5 + IndicatorVars_z_6_5 <= -0.000142857142857\n",
        "\n",
-       "_C81: - 1e-06 EdgeCaps_x_6_5 + IndicatorVars_z_6_5 >= -1e-06\n",
+       "_C81: - 0.000142857142857 EdgeCaps_x_6_5 + IndicatorVars_z_6_5\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C82: - EdgeCaps_x_6_9 + IndicatorVars_z_6_9 <= -1e-06\n",
+       "_C82: - EdgeCaps_x_6_9 + IndicatorVars_z_6_9 <= -0.000142857142857\n",
        "\n",
-       "_C83: - 1e-06 EdgeCaps_x_6_9 + IndicatorVars_z_6_9 >= -1e-06\n",
+       "_C83: - 0.000142857142857 EdgeCaps_x_6_9 + IndicatorVars_z_6_9\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C84: - EdgeCaps_x_7_10 + IndicatorVars_z_7_10 <= -1e-06\n",
+       "_C84: - EdgeCaps_x_7_10 + IndicatorVars_z_7_10 <= -0.000142857142857\n",
        "\n",
-       "_C85: - 1e-06 EdgeCaps_x_7_10 + IndicatorVars_z_7_10 >= -1e-06\n",
+       "_C85: - 0.000142857142857 EdgeCaps_x_7_10 + IndicatorVars_z_7_10\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C86: - EdgeCaps_x_7_11 + IndicatorVars_z_7_11 <= -1e-06\n",
+       "_C86: - EdgeCaps_x_7_11 + IndicatorVars_z_7_11 <= -0.000142857142857\n",
        "\n",
-       "_C87: - 1e-06 EdgeCaps_x_7_11 + IndicatorVars_z_7_11 >= -1e-06\n",
+       "_C87: - 0.000142857142857 EdgeCaps_x_7_11 + IndicatorVars_z_7_11\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C88: - EdgeCaps_x_9_11 + IndicatorVars_z_9_11 <= -1e-06\n",
+       "_C88: - EdgeCaps_x_9_11 + IndicatorVars_z_9_11 <= -0.000142857142857\n",
        "\n",
-       "_C89: - 1e-06 EdgeCaps_x_9_11 + IndicatorVars_z_9_11 >= -1e-06\n",
+       "_C89: - 0.000142857142857 EdgeCaps_x_9_11 + IndicatorVars_z_9_11\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C90: - EdgeCaps_x_9_12 + IndicatorVars_z_9_12 <= -1e-06\n",
+       "_C90: - EdgeCaps_x_9_12 + IndicatorVars_z_9_12 <= -0.000142857142857\n",
        "\n",
-       "_C91: - 1e-06 EdgeCaps_x_9_12 + IndicatorVars_z_9_12 >= -1e-06\n",
+       "_C91: - 0.000142857142857 EdgeCaps_x_9_12 + IndicatorVars_z_9_12\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C92: - EdgeCaps_x_10_13 + IndicatorVars_z_10_13 <= -1e-06\n",
+       "_C92: - EdgeCaps_x_10_13 + IndicatorVars_z_10_13 <= -0.000142857142857\n",
        "\n",
-       "_C93: - 1e-06 EdgeCaps_x_10_13 + IndicatorVars_z_10_13 >= -1e-06\n",
+       "_C93: - 0.000142857142857 EdgeCaps_x_10_13 + IndicatorVars_z_10_13\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C94: - EdgeCaps_x_11_13 + IndicatorVars_z_11_13 <= -1e-06\n",
+       "_C94: - EdgeCaps_x_11_13 + IndicatorVars_z_11_13 <= -0.000142857142857\n",
        "\n",
-       "_C95: - 1e-06 EdgeCaps_x_11_13 + IndicatorVars_z_11_13 >= -1e-06\n",
+       "_C95: - 0.000142857142857 EdgeCaps_x_11_13 + IndicatorVars_z_11_13\n",
+       " >= -0.000142857142857\n",
        "\n",
-       "_C96: - EdgeCaps_x_12_13 + IndicatorVars_z_12_13 <= -1e-06\n",
+       "_C96: - EdgeCaps_x_12_13 + IndicatorVars_z_12_13 <= -0.000142857142857\n",
        "\n",
-       "_C97: - 1e-06 EdgeCaps_x_12_13 + IndicatorVars_z_12_13 >= -1e-06\n",
+       "_C97: - 0.000142857142857 EdgeCaps_x_12_13 + IndicatorVars_z_12_13\n",
+       " >= -0.000142857142857\n",
        "\n",
        "VARIABLES\n",
-       "1 <= EdgeCaps_x_0_1 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_0_2 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_0_3 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_10_13 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_11_13 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_12_13 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_1_4 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_1_5 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_2_4 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_2_5 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_2_6 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_3_5 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_3_6 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_4_5 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_4_7 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_5_7 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_5_9 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_6_5 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_6_9 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_7_10 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_7_11 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_9_11 <= 7 Continuous\n",
-       "1 <= EdgeCaps_x_9_12 <= 7 Continuous\n",
+       "1 <= EdgeCaps_x_0_1 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_0_2 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_0_3 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_10_13 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_11_13 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_12_13 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_1_4 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_1_5 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_2_4 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_2_5 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_2_6 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_3_5 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_3_6 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_4_5 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_4_7 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_5_7 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_5_9 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_6_5 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_6_9 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_7_10 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_7_11 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_9_11 <= 84 Continuous\n",
+       "1 <= EdgeCaps_x_9_12 <= 84 Continuous\n",
        "EdgeFlows_y_0_1 Continuous\n",
        "EdgeFlows_y_0_2 Continuous\n",
        "EdgeFlows_y_0_3 Continuous\n",
@@ -510,7 +559,7 @@
        "0 <= IndicatorVars_z_9_12 <= 1 Integer"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +579,7 @@
        "1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +599,7 @@
        "'Optimal'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -569,61 +618,61 @@
      "output_type": "stream",
      "text": [
       "EdgeCaps_x_0_1 = 1.0\n",
-      "EdgeCaps_x_0_2 = 7.0\n",
+      "EdgeCaps_x_0_2 = 1.0\n",
       "EdgeCaps_x_0_3 = 1.0\n",
       "EdgeCaps_x_10_13 = 1.0\n",
-      "EdgeCaps_x_11_13 = 7.0\n",
+      "EdgeCaps_x_11_13 = 1.0\n",
       "EdgeCaps_x_12_13 = 1.0\n",
       "EdgeCaps_x_1_4 = 1.0\n",
       "EdgeCaps_x_1_5 = 1.0\n",
       "EdgeCaps_x_2_4 = 1.0\n",
-      "EdgeCaps_x_2_5 = 7.0\n",
+      "EdgeCaps_x_2_5 = 1.0\n",
       "EdgeCaps_x_2_6 = 1.0\n",
       "EdgeCaps_x_3_5 = 1.0\n",
       "EdgeCaps_x_3_6 = 1.0\n",
       "EdgeCaps_x_4_5 = 1.0\n",
       "EdgeCaps_x_4_7 = 1.0\n",
       "EdgeCaps_x_5_7 = 1.0\n",
-      "EdgeCaps_x_5_9 = 7.0\n",
+      "EdgeCaps_x_5_9 = 84.0\n",
       "EdgeCaps_x_6_5 = 1.0\n",
       "EdgeCaps_x_6_9 = 1.0\n",
       "EdgeCaps_x_7_10 = 1.0\n",
       "EdgeCaps_x_7_11 = 1.0\n",
-      "EdgeCaps_x_9_11 = 7.0\n",
-      "EdgeCaps_x_9_12 = 1.0\n",
-      "EdgeFlows_y_0_1 = 1.0\n",
-      "EdgeFlows_y_0_2 = 5.0\n",
-      "EdgeFlows_y_0_3 = 1.0\n",
+      "EdgeCaps_x_9_11 = 1.0\n",
+      "EdgeCaps_x_9_12 = 84.0\n",
+      "EdgeFlows_y_0_1 = 2.0\n",
+      "EdgeFlows_y_0_2 = 3.0\n",
+      "EdgeFlows_y_0_3 = 2.0\n",
       "EdgeFlows_y_10_13 = 1.0\n",
-      "EdgeFlows_y_11_13 = 5.0\n",
-      "EdgeFlows_y_12_13 = 1.0\n",
-      "EdgeFlows_y_1_4 = 0.0\n",
+      "EdgeFlows_y_11_13 = 2.0\n",
+      "EdgeFlows_y_12_13 = 4.0\n",
+      "EdgeFlows_y_1_4 = 1.0\n",
       "EdgeFlows_y_1_5 = 1.0\n",
       "EdgeFlows_y_2_4 = 1.0\n",
-      "EdgeFlows_y_2_5 = 3.0\n",
+      "EdgeFlows_y_2_5 = 1.0\n",
       "EdgeFlows_y_2_6 = 1.0\n",
       "EdgeFlows_y_3_5 = 1.0\n",
-      "EdgeFlows_y_3_6 = 0.0\n",
-      "EdgeFlows_y_4_5 = 0.0\n",
+      "EdgeFlows_y_3_6 = 1.0\n",
+      "EdgeFlows_y_4_5 = 1.0\n",
       "EdgeFlows_y_4_7 = 1.0\n",
       "EdgeFlows_y_5_7 = 1.0\n",
       "EdgeFlows_y_5_9 = 4.0\n",
-      "EdgeFlows_y_6_5 = 0.0\n",
+      "EdgeFlows_y_6_5 = 1.0\n",
       "EdgeFlows_y_6_9 = 1.0\n",
       "EdgeFlows_y_7_10 = 1.0\n",
       "EdgeFlows_y_7_11 = 1.0\n",
-      "EdgeFlows_y_9_11 = 4.0\n",
-      "EdgeFlows_y_9_12 = 1.0\n",
+      "EdgeFlows_y_9_11 = 1.0\n",
+      "EdgeFlows_y_9_12 = 4.0\n",
       "IndicatorVars_z_0_1 = 0.0\n",
-      "IndicatorVars_z_0_2 = 1.0\n",
+      "IndicatorVars_z_0_2 = 0.0\n",
       "IndicatorVars_z_0_3 = 0.0\n",
       "IndicatorVars_z_10_13 = 0.0\n",
-      "IndicatorVars_z_11_13 = 1.0\n",
+      "IndicatorVars_z_11_13 = 0.0\n",
       "IndicatorVars_z_12_13 = 0.0\n",
       "IndicatorVars_z_1_4 = 0.0\n",
       "IndicatorVars_z_1_5 = 0.0\n",
       "IndicatorVars_z_2_4 = 0.0\n",
-      "IndicatorVars_z_2_5 = 1.0\n",
+      "IndicatorVars_z_2_5 = 0.0\n",
       "IndicatorVars_z_2_6 = 0.0\n",
       "IndicatorVars_z_3_5 = 0.0\n",
       "IndicatorVars_z_3_6 = 0.0\n",
@@ -635,8 +684,8 @@
       "IndicatorVars_z_6_9 = 0.0\n",
       "IndicatorVars_z_7_10 = 0.0\n",
       "IndicatorVars_z_7_11 = 0.0\n",
-      "IndicatorVars_z_9_11 = 1.0\n",
-      "IndicatorVars_z_9_12 = 0.0\n"
+      "IndicatorVars_z_9_11 = 0.0\n",
+      "IndicatorVars_z_9_12 = 1.0\n"
      ]
     }
    ],
