LPSolver on four bn_datasets

--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,12 +202,40 @@
     "        allComb[iRow].append(costAfter)\n",
     "        allComb[iRow].append(timeCost)\n",
     "        print(str(allComb[iRow]))\n",
+    "    write_txt(pathOut + 'allComb_out.csv', allComb)\n",
+    "    \n",
+    "def test_linear_bnds(pathIn, pathOut):\n",
+    "    with open(pathIn + 'allComb.csv', 'r') as f:\n",
+    "        reader = csv.reader(f)\n",
+    "        allComb = list(reader)\n",
+    "    for iRow in list(range(0, nrow(allComb))):\n",
+    "        print(\"processing: \"+str(iRow))\n",
+    "        print(str(allComb[iRow]))\n",
+    "        adj_matA = read_txt(filename=pathIn + str(iRow+1) + 'MBefore.csv')\n",
+    "        adj_matB = read_txt(filename=pathIn + str(iRow+1) + 'MAfter.csv')\n",
+    "        nSize   = nrow(adj_matA)\n",
+    "        nSource = int(allComb[iRow][0])\n",
+    "        nSink   = int(allComb[iRow][0])\n",
+    "        nTrauma = int(allComb[iRow][1])\n",
+    "        maxflowBefore = int(allComb[iRow][2])\n",
+    "        maxflowAfter  = int(allComb[iRow][3])\n",
+    "        \n",
+    "        timeStart = time.time()\n",
+    "        costAfter   = process_graph_LPSolver(adj_matrix=adj_matB, \n",
+    "                                              cost_function=cost_function, \n",
+    "                                              flow_val=maxflowBefore, \n",
+    "                                              sources= list(range(0, nSource)),\n",
+    "                                              sinks = list(range(nSize-nSink, nSize)))\n",
+    "        timeCost  = time.time() - timeStart\n",
+    "        allComb[iRow].append(costAfter)\n",
+    "        allComb[iRow].append(timeCost)\n",
+    "        print(str(allComb[iRow]))\n",
     "    write_txt(pathOut + 'allComb_out.csv', allComb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,15 +379,27 @@
     "#     pathIn  = 'testcases/linear/';\n",
     "#     pathOut = 'testcases/linear/'\n",
     "#     test_linear(pathIn, pathOut)\n",
-    "    pathIn  = 'testcases/sizeofgraphset2/';\n",
-    "    pathOut = 'testcases/sizeofgraphset2/'\n",
-    "    test_linear(pathIn, pathOut)\n",
-    "    '''test of size of graph vs linear cost function'''"
+    "#     pathIn  = 'testcases/sizeofgraphset2/';\n",
+    "#     pathOut = 'testcases/sizeofgraphset2/'\n",
+    "#     test_linear(pathIn, pathOut)\n",
+    "    '''testcase from bn_datasets'''\n",
+    "    pathIn   = 'bn_dataset/out/bn-cat-mixed-species_brain_1.txt';\n",
+    "    pathOut  = 'bn_dataset/out/bn-cat-mixed-species_brain_1.txt';\n",
+    "    test_linear_bnds(pathIn, pathOut)\n",
+    "    pathIn   = 'bn_dataset/out/bn-fly-drosophila_medulla_1.txt';\n",
+    "    pathOut  = 'bn_dataset/out/bn-fly-drosophila_medulla_1.txt';\n",
+    "    test_linear_bnds(pathIn, pathOut)\n",
+    "    pathIn   = 'bn_dataset/out/bn-macaque-rhesus_brain_1.txt';\n",
+    "    pathOut  = 'bn_dataset/out/bn-macaque-rhesus_brain_1.txt';\n",
+    "    test_linear_bnds(pathIn, pathOut)\n",
+    "    pathIn   = 'bn_dataset/out/bn-mouse_brain_1.txt';\n",
+    "    pathOut  = 'bn_dataset/out/bn-mouse_brain_1.txt';\n",
+    "    test_linear_bnds(pathIn, pathOut)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -380,35 +420,101 @@
      "output_type": "stream",
      "text": [
       "processing: 0\n",
-      "['100', '16', '16', '0.3', '64', '389', '91']\n",
-      "['100', '16', '16', '0.3', '64', '389', '91', 0.0, 298.0, 0.4607820510864258]\n",
+      "['5', '5', '25', '20']\n",
+      "['5', '5', '25', '20', 0.0, 0.18495512008666992]\n",
       "processing: 1\n",
-      "['200', '16', '16', '0.3', '64', '835', '546']\n",
-      "['200', '16', '16', '0.3', '64', '835', '546', 0.0, 289.0, 2.6465139389038086]\n",
+      "['5', '10', '25', '20']\n",
+      "['5', '10', '25', '20', 0.0, 0.16630196571350098]\n",
       "processing: 2\n",
-      "['300', '16', '16', '0.3', '64', '1361', '1057']\n",
-      "['300', '16', '16', '0.3', '64', '1361', '1057', 0.0, 304.0, 6.516830921173096]\n",
+      "['5', '20', '25', '15']\n",
+      "['5', '20', '25', '15', 0.0, 0.130079984664917]\n",
       "processing: 3\n",
-      "['400', '16', '16', '0.3', '64', '1815', '1506']\n",
-      "['400', '16', '16', '0.3', '64', '1815', '1506', 0.0, 309.0, 16.392762184143066]\n",
+      "['5', '40', '25', '5']\n",
+      "['5', '40', '25', '5', 13.0, 0.053273677825927734]\n",
       "processing: 4\n",
-      "['500', '16', '16', '0.3', '64', '2293', '2000']\n",
-      "['500', '16', '16', '0.3', '64', '2293', '2000', 0.0, 293.0, 27.959398984909058]\n",
+      "['10', '5', '96', '80']\n",
+      "['10', '5', '96', '80', 0.0, 0.18552589416503906]\n",
       "processing: 5\n",
-      "['600', '16', '16', '0.3', '64', '2755', '2455']\n",
-      "['600', '16', '16', '0.3', '64', '2755', '2455', 0.0, 300.0, 56.886494159698486]\n",
+      "['10', '10', '96', '84']\n",
+      "['10', '10', '96', '84', 0.0, 0.17176389694213867]\n",
       "processing: 6\n",
-      "['700', '16', '16', '0.3', '64', '3199', '2902']\n",
-      "['700', '16', '16', '0.3', '64', '3199', '2902', 0.0, 297.0, 82.9551169872284]\n",
+      "['10', '20', '96', '60']\n",
+      "['10', '20', '96', '60', 14.0, 0.1249699592590332]\n",
       "processing: 7\n",
-      "['800', '16', '16', '0.3', '64', '3748', '3432']\n",
-      "['800', '16', '16', '0.3', '64', '3748', '3432', 0.0, 316.0, 112.35358786582947]\n",
-      "processing: 8\n",
-      "['900', '16', '16', '0.3', '64', '4187', '3877']\n",
-      "['900', '16', '16', '0.3', '64', '4187', '3877', 0.0, 310.0, 168.79023385047913]\n",
-      "processing: 9\n",
-      "['1000', '16', '16', '0.3', '64', '4708', '4375']\n",
-      "['1000', '16', '16', '0.3', '64', '4708', '4375', 0.0, 333.0, 26421.109426021576]\n"
+      "['10', '40', '96', '13']\n",
+      "['10', '40', '96', '13', 83.0, 0.04227805137634277]\n",
+      "processing: 0\n",
+      "['30', '10', '180', '174']\n",
+      "['30', '10', '180', '174', 0.0, 2.9388442039489746]\n",
+      "processing: 1\n",
+      "['30', '50', '180', '177']\n",
+      "['30', '50', '180', '177', 0.0, 2.724503755569458]\n",
+      "processing: 2\n",
+      "['30', '250', '180', '144']\n",
+      "['30', '250', '180', '144', 0.0, 2.3967652320861816]\n",
+      "processing: 3\n",
+      "['30', '1000', '180', '61']\n",
+      "['30', '1000', '180', '61', 0.0, 1.475865125656128]\n",
+      "processing: 4\n",
+      "['300', '10', '1563', '1555']\n",
+      "['300', '10', '1563', '1555', 0.0, 4.57770299911499]\n",
+      "processing: 5\n",
+      "['300', '50', '1563', '1509']\n",
+      "['300', '50', '1563', '1509', 0.0, 4.065356016159058]\n",
+      "processing: 6\n",
+      "['300', '250', '1563', '895']\n",
+      "['300', '250', '1563', '895', 668.0, 2.6265718936920166]\n",
+      "processing: 7\n",
+      "['300', '1000', '1563', '155']\n",
+      "['300', '1000', '1563', '155', 1408.0, 1.5306496620178223]\n",
+      "processing: 0\n",
+      "['10', '5', '73', '73']\n",
+      "['10', '5', '73', '73', 0.0, 0.8100128173828125]\n",
+      "processing: 1\n",
+      "['10', '10', '73', '62']\n",
+      "['10', '10', '73', '62', 0.0, 0.7528760433197021]\n",
+      "processing: 2\n",
+      "['10', '50', '73', '44']\n",
+      "['10', '50', '73', '44', 0.0, 0.5210669040679932]\n",
+      "processing: 3\n",
+      "['10', '100', '73', '42']\n",
+      "['10', '100', '73', '42', 0.0, 0.2839341163635254]\n",
+      "processing: 4\n",
+      "['40', '5', '522', '461']\n",
+      "['40', '5', '522', '461', 53.0, 0.9312477111816406]\n",
+      "processing: 5\n",
+      "['40', '10', '522', '470']\n",
+      "['40', '10', '522', '470', 42.0, 1.0005369186401367]\n",
+      "processing: 6\n",
+      "['40', '50', '522', '354']\n",
+      "['40', '50', '522', '354', 168.0, 0.5391387939453125]\n",
+      "processing: 7\n",
+      "['40', '100', '522', '229']\n",
+      "['40', '100', '522', '229', 293.0, 0.3887908458709717]\n",
+      "processing: 0\n",
+      "['10', '5', '100', '90']\n",
+      "['10', '5', '100', '90', 0.0, 4.191672086715698]\n",
+      "processing: 1\n",
+      "['10', '10', '100', '90']\n",
+      "['10', '10', '100', '90', 0.0, 3.5055031776428223]\n",
+      "processing: 2\n",
+      "['10', '50', '100', '70']\n",
+      "['10', '50', '100', '70', 0.0, 2.6441237926483154]\n",
+      "processing: 3\n",
+      "['10', '100', '100', '50']\n",
+      "['10', '100', '100', '50', 0.0, 1.170788049697876]\n",
+      "processing: 4\n",
+      "['40', '5', '1600', '1560']\n",
+      "['40', '5', '1600', '1560', 0.0, 5.658013105392456]\n",
+      "processing: 5\n",
+      "['40', '10', '1600', '1478']\n",
+      "['40', '10', '1600', '1478', 0.0, 4.689342975616455]\n",
+      "processing: 6\n",
+      "['40', '50', '1600', '1120']\n",
+      "['40', '50', '1600', '1120', 0.0, 3.07122802734375]\n",
+      "processing: 7\n",
+      "['40', '100', '1600', '840']\n",
+      "['40', '100', '1600', '840', 644.0, 1.384876012802124]\n"
      ]
     }
    ],
