LPSolver wrapped up

--- a/Brain Networks Trauma Simulation.ipynb
+++ b/Brain Networks Trauma Simulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,27 +379,27 @@
     "#     pathIn  = 'testcases/linear/';\n",
     "#     pathOut = 'testcases/linear/'\n",
     "#     test_linear(pathIn, pathOut)\n",
-    "#     pathIn  = 'testcases/sizeofgraphset2/';\n",
-    "#     pathOut = 'testcases/sizeofgraphset2/'\n",
-    "#     test_linear(pathIn, pathOut)\n",
-    "    '''testcase from bn_datasets'''\n",
-    "    pathIn   = 'bn_dataset/out/bn-cat-mixed-species_brain_1.txt';\n",
-    "    pathOut  = 'bn_dataset/out/bn-cat-mixed-species_brain_1.txt';\n",
-    "    test_linear_bnds(pathIn, pathOut)\n",
-    "    pathIn   = 'bn_dataset/out/bn-fly-drosophila_medulla_1.txt';\n",
-    "    pathOut  = 'bn_dataset/out/bn-fly-drosophila_medulla_1.txt';\n",
-    "    test_linear_bnds(pathIn, pathOut)\n",
-    "    pathIn   = 'bn_dataset/out/bn-macaque-rhesus_brain_1.txt';\n",
-    "    pathOut  = 'bn_dataset/out/bn-macaque-rhesus_brain_1.txt';\n",
-    "    test_linear_bnds(pathIn, pathOut)\n",
-    "    pathIn   = 'bn_dataset/out/bn-mouse_brain_1.txt';\n",
-    "    pathOut  = 'bn_dataset/out/bn-mouse_brain_1.txt';\n",
-    "    test_linear_bnds(pathIn, pathOut)"
+    "    pathIn  = 'testcases/sizeofgraphset2/';\n",
+    "    pathOut = 'testcases/sizeofgraphset2/'\n",
+    "    test_linear(pathIn, pathOut)\n",
+    "#     '''testcase from bn_datasets'''\n",
+    "#     pathIn   = 'bn_dataset/out/bn-cat-mixed-species_brain_1.txt';\n",
+    "#     pathOut  = 'bn_dataset/out/bn-cat-mixed-species_brain_1.txt';\n",
+    "#     test_linear_bnds(pathIn, pathOut)\n",
+    "#     pathIn   = 'bn_dataset/out/bn-fly-drosophila_medulla_1.txt';\n",
+    "#     pathOut  = 'bn_dataset/out/bn-fly-drosophila_medulla_1.txt';\n",
+    "#     test_linear_bnds(pathIn, pathOut)\n",
+    "#     pathIn   = 'bn_dataset/out/bn-macaque-rhesus_brain_1.txt';\n",
+    "#     pathOut  = 'bn_dataset/out/bn-macaque-rhesus_brain_1.txt';\n",
+    "#     test_linear_bnds(pathIn, pathOut)\n",
+    "#     pathIn   = 'bn_dataset/out/bn-mouse_brain_1.txt';\n",
+    "#     pathOut  = 'bn_dataset/out/bn-mouse_brain_1.txt';\n",
+    "#     test_linear_bnds(pathIn, pathOut)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -420,101 +420,35 @@
      "output_type": "stream",
      "text": [
       "processing: 0\n",
-      "['5', '5', '25', '20']\n",
-      "['5', '5', '25', '20', 0.0, 0.18495512008666992]\n",
+      "['200', '16', '16', '0.2', '2', '586', '580']\n",
+      "['200', '16', '16', '0.2', '2', '586', '580', 0.0, 6.0, 1.6949331760406494]\n",
       "processing: 1\n",
-      "['5', '10', '25', '20']\n",
-      "['5', '10', '25', '20', 0.0, 0.16630196571350098]\n",
+      "['200', '16', '16', '0.2', '10', '601', '566']\n",
+      "['200', '16', '16', '0.2', '10', '601', '566', 0.0, 35.0, 1.650306224822998]\n",
       "processing: 2\n",
-      "['5', '20', '25', '15']\n",
-      "['5', '20', '25', '15', 0.0, 0.130079984664917]\n",
+      "['200', '16', '16', '0.2', '40', '591', '450']\n",
+      "['200', '16', '16', '0.2', '40', '591', '450', 0.0, 141.0, 1.6315782070159912]\n",
       "processing: 3\n",
-      "['5', '40', '25', '5']\n",
-      "['5', '40', '25', '5', 13.0, 0.053273677825927734]\n",
+      "['200', '16', '16', '0.2', '100', '581', '273']\n",
+      "['200', '16', '16', '0.2', '100', '581', '273', 0.0, 308.0, 1.6398651599884033]\n",
       "processing: 4\n",
-      "['10', '5', '96', '80']\n",
-      "['10', '5', '96', '80', 0.0, 0.18552589416503906]\n",
+      "['200', '16', '16', '0.2', '160', '549', '76']\n",
+      "['200', '16', '16', '0.2', '160', '549', '76', 0.0, 473.0, 1.4407110214233398]\n",
       "processing: 5\n",
-      "['10', '10', '96', '84']\n",
-      "['10', '10', '96', '84', 0.0, 0.17176389694213867]\n",
+      "['200', '16', '16', '0.8', '2', '2348', '2323']\n",
+      "['200', '16', '16', '0.8', '2', '2348', '2323', 0.0, 25.0, 8.849464654922485]\n",
       "processing: 6\n",
-      "['10', '20', '96', '60']\n",
-      "['10', '20', '96', '60', 14.0, 0.1249699592590332]\n",
+      "['200', '16', '16', '0.8', '10', '2359', '2228']\n",
+      "['200', '16', '16', '0.8', '10', '2359', '2228', 0.0, 131.0, 11.137988090515137]\n",
       "processing: 7\n",
-      "['10', '40', '96', '13']\n",
-      "['10', '40', '96', '13', 83.0, 0.04227805137634277]\n",
-      "processing: 0\n",
-      "['30', '10', '180', '174']\n",
-      "['30', '10', '180', '174', 0.0, 2.9388442039489746]\n",
-      "processing: 1\n",
-      "['30', '50', '180', '177']\n",
-      "['30', '50', '180', '177', 0.0, 2.724503755569458]\n",
-      "processing: 2\n",
-      "['30', '250', '180', '144']\n",
-      "['30', '250', '180', '144', 0.0, 2.3967652320861816]\n",
-      "processing: 3\n",
-      "['30', '1000', '180', '61']\n",
-      "['30', '1000', '180', '61', 0.0, 1.475865125656128]\n",
-      "processing: 4\n",
-      "['300', '10', '1563', '1555']\n",
-      "['300', '10', '1563', '1555', 0.0, 4.57770299911499]\n",
-      "processing: 5\n",
-      "['300', '50', '1563', '1509']\n",
-      "['300', '50', '1563', '1509', 0.0, 4.065356016159058]\n",
-      "processing: 6\n",
-      "['300', '250', '1563', '895']\n",
-      "['300', '250', '1563', '895', 668.0, 2.6265718936920166]\n",
-      "processing: 7\n",
-      "['300', '1000', '1563', '155']\n",
-      "['300', '1000', '1563', '155', 1408.0, 1.5306496620178223]\n",
-      "processing: 0\n",
-      "['10', '5', '73', '73']\n",
-      "['10', '5', '73', '73', 0.0, 0.8100128173828125]\n",
-      "processing: 1\n",
-      "['10', '10', '73', '62']\n",
-      "['10', '10', '73', '62', 0.0, 0.7528760433197021]\n",
-      "processing: 2\n",
-      "['10', '50', '73', '44']\n",
-      "['10', '50', '73', '44', 0.0, 0.5210669040679932]\n",
-      "processing: 3\n",
-      "['10', '100', '73', '42']\n",
-      "['10', '100', '73', '42', 0.0, 0.2839341163635254]\n",
-      "processing: 4\n",
-      "['40', '5', '522', '461']\n",
-      "['40', '5', '522', '461', 53.0, 0.9312477111816406]\n",
-      "processing: 5\n",
-      "['40', '10', '522', '470']\n",
-      "['40', '10', '522', '470', 42.0, 1.0005369186401367]\n",
-      "processing: 6\n",
-      "['40', '50', '522', '354']\n",
-      "['40', '50', '522', '354', 168.0, 0.5391387939453125]\n",
-      "processing: 7\n",
-      "['40', '100', '522', '229']\n",
-      "['40', '100', '522', '229', 293.0, 0.3887908458709717]\n",
-      "processing: 0\n",
-      "['10', '5', '100', '90']\n",
-      "['10', '5', '100', '90', 0.0, 4.191672086715698]\n",
-      "processing: 1\n",
-      "['10', '10', '100', '90']\n",
-      "['10', '10', '100', '90', 0.0, 3.5055031776428223]\n",
-      "processing: 2\n",
-      "['10', '50', '100', '70']\n",
-      "['10', '50', '100', '70', 0.0, 2.6441237926483154]\n",
-      "processing: 3\n",
-      "['10', '100', '100', '50']\n",
-      "['10', '100', '100', '50', 0.0, 1.170788049697876]\n",
-      "processing: 4\n",
-      "['40', '5', '1600', '1560']\n",
-      "['40', '5', '1600', '1560', 0.0, 5.658013105392456]\n",
-      "processing: 5\n",
-      "['40', '10', '1600', '1478']\n",
-      "['40', '10', '1600', '1478', 0.0, 4.689342975616455]\n",
-      "processing: 6\n",
-      "['40', '50', '1600', '1120']\n",
-      "['40', '50', '1600', '1120', 0.0, 3.07122802734375]\n",
-      "processing: 7\n",
-      "['40', '100', '1600', '840']\n",
-      "['40', '100', '1600', '840', 644.0, 1.384876012802124]\n"
+      "['200', '16', '16', '0.8', '40', '2332', '1805']\n",
+      "['200', '16', '16', '0.8', '40', '2332', '1805', 0.0, 527.0, 9.1339271068573]\n",
+      "processing: 8\n",
+      "['200', '16', '16', '0.8', '100', '2330', '1058']\n",
+      "['200', '16', '16', '0.8', '100', '2330', '1058', 0.0, 1272.0, 8.264976024627686]\n",
+      "processing: 9\n",
+      "['200', '16', '16', '0.8', '160', '2331', '308']\n",
+      "['200', '16', '16', '0.8', '160', '2331', '308', 0.0, 2023.0, 8.816609144210815]\n"
      ]
     }
    ],
